# pg_flatbuffers

./: .gitignore  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/pg_flatbuffers/: Cargo.toml  pg_flatbuffers.control
crates/pg_flatbuffers/.cargo/: config.toml
crates/pg_flatbuffers/sql/: catalog.sql
crates/pg_flatbuffers/src/: catalog.rs  from_json.rs  functions.rs  guc.rs  lib.rs  schema_cache.rs  to_json.rs  verify.rs
crates/pg_flatbuffers/src/functions/: from_json.rs  mod.rs  query.rs  query_array.rs  query_multi.rs  root_type.rs  tests.rs  to_json.rs  util.rs  verify.rs
crates/pg_flatbuffers/src/functions/tests/: fixtures.rs  from_json.rs  guc.rs  mod.rs  preamble.rs  query.rs  query_array.rs  query_multi.rs  root_type.rs  to_json.rs  vector64.rs  verify.rs
crates/pg_flatbuffers/src/query/: ast.rs  executor.rs  mod.rs  parser.rs
crates/pg_flatbuffers/src/query/executor/: leaf.rs  map_key.rs  mod.rs  pg_text.rs  struct_.rs  tests.rs  union.rs  util.rs  vector.rs  walk.rs
crates/pg_flatbuffers/src/query/executor/tests/: array.rs  common.rs  comparator.rs  mod.rs  struct_.rs  table.rs  union.rs  vector.rs  vector_of_struct.rs
crates/pg_flatbuffers/tests/pg_regress/expected/: catalog_security.out  install.out  validate_schema.out
crates/pg_flatbuffers/tests/pg_regress/sql/: catalog_security.sql  install.sql  setup.sql  validate_schema.sql
docs/: README.md  design.md
docs/background/: postgres-protobuf.md
docs/design/: README.md  catalog-and-schemas.md  compatibility-build-test.md  json-conversion.md  overview.md  query-execution.md  roadmap.md  safety.md  schema-cache.md  sql-surface.md
just/: doctor.just
