# Workspace root for pg_flatbuffers.
#
# Member crates live in crates/. Shared dependency versions are hoisted
# into [workspace.dependencies] so member manifests can `workspace = true`.
# See docs/design.md §5 for the layout rationale.

[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
version      = "0.0.1"
edition      = "2024"
rust-version = "1.95"
license      = "MIT"
repository   = "https://github.com/example/pg_flatbuffers"
authors      = ["pg_flatbuffers contributors"]

[workspace.dependencies]
# pgrx requires exact-version pinning; bump in lockstep across the workspace.
pgrx       = { version = "=0.18.0" }
pgrx-tests = { version = "=0.18.0" }

# FlatBuffers runtime + reflection bindings (separate crates, separate
# version lines: `flatbuffers` tracks the FB project version, but the
# `flatbuffers-reflection` Rust crate is independently versioned).
flatbuffers            = "25"
flatbuffers-reflection = "0.1"
serde_json             = "1"
thiserror              = "2"
parking_lot            = "0.12"
lru                    = "0.18"

[profile.dev]
# pgrx requires unwinding panics so PG can map them to ereport(ERROR).
panic = "unwind"

[profile.release]
panic        = "unwind"
opt-level    = 3
lto          = "fat"
codegen-units = 1
